--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/agency/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=
 
-DB_USERNAME=
-DB_PASSWORD=
+DB_USERNAME=root
+DB_PASSWORD=root
 
 NEXT_PUBLIC_URL=http://localhost:3000/
 NEXT_PUBLIC_DOMAIN=localhost:3000
@@ -36,8 +36,8 @@ DATABPASE_PASSWORD=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:kamal@localhost:3306/plura"
+DATABASE_URL="mysql://root:root@localhost:3306/plura"
 PROD_DATABASE_URL=
-LOCAL_DATABASE_URL="mysql://root:kamal@localhost:3306/plura"
+LOCAL_DATABASE_URL="mysql://root:root@localhost:3306/plura"
 # https://www.builder.io/c/docs/using-your-api-key
 NEXT_PUBLIC_BUILDER_API_KEY=
